kube/bitcoincash-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: bitcoincash
  name: bitcoincash
spec:
  replicas: 3
  selector:
    matchLabels:
      service: bitcoincash
  template:
    metadata:
      labels:
        service: bitcoincash
    spec:
      containers:
      - image: zquestz/bitcoincash:latest
        imagePullPolicy: Always
        name: bitcoincash
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
      restartPolicy: Always
