kube/bitcoincash-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bitcoincash-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.bitcoincash.org
    - bitcoincash.org
    secretName: bitcoincash-tls
  defaultBackend:
    service:
      name: bitcoincash
      port:
        number: 84
  rules:
  - host: bitcoincash.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitcoincash
            port:
              number: 84
  - host: www.bitcoincash.org
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: bitcoincash
            port:
              number: 84
